# syvaoppiminen

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-guide.md  404.html  AGENTS.md  HOW-TO-SKELETON.md  LICENSE  LICENSE.template  README.md  index.html  mkdocs.yml  optimize_svg.sh  pyproject.toml  siteinfo.json  svgo.config.js
notebooks/: README.md  backup_solutions.sh  docker-compose-marimo-cuda.yml  marimo-cuda.Dockerfile  pyproject.toml  torchvista_graph_fixed.html
notebooks/gitlfs-store/: 502_cifar10_fractionalmaxp.pth  suomen-sanomalehtikielen-taajuussanasto-utf8.txt
notebooks/nb/100/: 110_first_model.ipynb  110_first_model.py
notebooks/nb/200/: 200_numpy_nn.ipynb  200_numpy_nn.py  210_numpy_to_pytorch.ipynb  210_numpy_to_pytorch.py  211_pytorch_tensors.ipynb  211_pytorch_tensors.py  212_tensors.ipynb  212_tensors.py  213_auto_mpg.py  214_cyberhate.py
notebooks/nb/300/: 300_numpy_to_pytorch_pt2.py  301_autogradqs_tutorial.py  302_backpropagation.py  303_chained_funcs.py  310_numpy_to_pytorch_part2.ipynb  310_numpy_to_pytorch_pt2.py  311_autogradqs_tutorial.py  311_the_very_basics.ipynb  312_backpropagation.ipynb  312_backpropagation.py
notebooks/nb/400/: 400_fashion_mnist.py  401_fashion_mnist_eval.py  403_activation_functions.py  410_cifar10.py  411_cifar10.py  412_imagefolder.py  420_gaussian_regression.py
notebooks/nb/500/: 501_fractional_max_pooling.py  502_fractional_max_pooling.py  503_fractional_max_pool_MNIST.py  504_lenet_MNIST.py  505_hog.py
notebooks/nb/600/: 600_hello_hugging_face.py  601_hate_speech.py  602_pretrained.py  610_dogs_vs_cats.py  611_rps_generator.py  612_rps_transfer_learning.py
notebooks/nb/700/: 700_embeddings.py  701_spacy_playground.py  702_nvidia_pretrained_glove.py  710_char_rnn_classification_tutorial.py  711_char_rnn_generation_tutorial.py  712_seq2seq_translation_tutorial.py  713_nvidia_language_model_embedding.py  720_perplexity.py  721_neural_machine_translation_transformer.py  722_microgpt.py
notebooks/nb/800/: 800_metro_interstate_traffic.py
notebooks/nb/solutions/: 111_IDEA_first_model_autopsy.ipynb  213_tensor_exercises.ipynb  214_cyberhate.ipynb  (+14 more)
(+56 files in other folders)
