[project]
authors = [
    {name = "Jani Sourander", email = "sourander@gmail.com"},
]
requires-python = "<4.0,>=3.12"
dependencies = [
    "mkdocs-material",
    "mkdocs-awesome-nav",
]
name = "syvaoppiminen"
version = "0.1.0"
description = ""
readme = "README.md"


[dependency-groups]
dev = [
    "pre-commit>=4.1.0"
]
