[project]
name = "nb"
version = "0.1.0"
requires-python = ">=3.12, <4.0"
dependencies = [
    "fi-core-news-lg",
    "fi-core-news-sm",
    "marimo[recommended]>=0.18.0",
    "matplotlib>=3.10.6",
    "plotly>=6.5.0",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "setuptools==81.0.0",
    "spacy>=3.8.11",
    "tensorboard>=2.20.0",
    "torchmetrics>=1.8.2",
    "torchvista>=0.2.6",
    "torchviz>=0.0.3",
    "transformers[retrieval,timm,vision]>=4.57.3",
    "wigglystuff>=0.2.8",
]

[tool.uv.sources]
fi-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/fi_core_news_sm-3.8.0/fi_core_news_sm-3.8.0-py3-none-any.whl" }
fi-core-news-lg = { url = "https://github.com/explosion/spacy-models/releases/download/fi_core_news_lg-3.8.0/fi_core_news_lg-3.8.0-py3-none-any.whl" }
